# FileCompressor2

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
headers/: Decompress.h
src/: CMakeLists.txt  Compress.cpp  Compress.h  Compress.hpp  Compressor.cpp  Compressor.h  Compressor.hpp  Decompress.cpp  Decompress.h  Decompress.hpp  Main.cpp  Result.hpp
